# gssw

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Makefile  example.c  example_adj.c  gssw.c  gssw.h  gssw_test.c  main.c  ssw.c  ssw.h
